adding self-hosting guide

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -20,11 +20,7 @@ That's why we made the **Migrations API**. It allows you to easily call the cler
 With the **Migrations API**, what was once a nightmarish task becomes a manageable expand-and-contract data migration. This API not only provides you with **observability** through a live dashboard and logs but also **flexibility**. You can pause, restart, or even abandon a migration without risk, all while maintaining zero downtime. By the end of the process, your users might not even realize they've been transitioned to a new system.
 
 <CardGroup cols={2}>
-  <Card
-    title="Self Hosting Your API"
-    icon="stars"
-    href="https://mintlify.com/docs/quickstart"
-  >
+  <Card title="Self Hosting Your API" icon="stars" href="/self-host">
     Get the migrations hosted using Cloudflare Workers!
   </Card>
   <Card
@@ -45,7 +41,7 @@ We've made a series of guides and packages to help you implement the Migrations 
     title="Supabase Guide"
     icon="square-bolt"
     color="#15593B"
-    href="https://mintlify.com/docs/settings/global"
+    href="/quickstart"
   >
     Migrate your Supabase users to Clerk.
   </Card>
