just need to document supabase

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -26,7 +26,7 @@ With the **Migrations API**, what was once a nightmarish task becomes a manageab
   <Card
     title="Using The Migrations API"
     icon="code"
-    href="https://mintlify.com/docs/development"
+    href="/using-the-migrations-api"
   >
     Learn how to use the Migrations API to migrate your users and organizations.
   </Card>
@@ -41,16 +41,16 @@ We've made a series of guides and packages to help you implement the Migrations 
     title="Supabase Guide"
     icon="square-bolt"
     color="#15593B"
-    href="/quickstart"
+    href="/guides/supabase"
   >
     Migrate your Supabase users to Clerk.
   </Card>
   <Card
     title="Next-Auth Guide"
     icon="key"
-        iconType="solid"
+    iconType="solid"
 
-    href="https://mintlify.com/docs/api-playground/openapi"
+    href="/guides/next-auth"
 
 >
 
@@ -60,14 +60,14 @@ We've made a series of guides and packages to help you implement the Migrations 
   <Card
     title="Auth0 Guide"
     icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
+    href="/guides/auth-0"
   >
     Build interactive features and designs to guide your users
   </Card>
   <Card
     title="Using Other Auth Providers"
     icon="stars"
-    href="https://mintlify.com/customers"
+    href="/guides/other-auth-providers"
   >
     Check out our showcase of our favorite documentation
   </Card>
