--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,15 +3,32 @@ title: Introduction
 description: "Welcome To the Clerk Migrations Documentation!"
 ---
 
-# Migrating Auth Is Hard
+# Migrating Auth
 
 It takes 5 minutes to set up auth with clerk. You get user management, organization management, roles, and much more. But what if you already are using an auth system, and you have users or even organizations?
 
-Well then it's not so easy.
+This guide is here to help you through the process.
 
-If you want to do a zero-downtime migration there are gotchas around every corner, 200 edges cases to worry about, rate limits, multiple ids floating around, different sessions, it's a nightmare.
+## Using Expand and Contract.
+ 
+Our auth migration follows a similiar pattern to the common expand and contract process. [Read More here](https://www.prisma.io/dataguide/types/relational/expand-and-contract-pattern)
 
-Is the solution then to take your app offline for several hours, rushing to transfer all your critical data to a new authentication system, one that is impossible to rollback from if you mess up the transfer?
+<Steps>
+  <Step title="Sync Your Data to Clerk.">
+    Use <b>Clerk Polling</b> to sync your data to Clerk. [Read More Here.](https://www.prisma.io/dataguide/types/relational/expand-and-contract-pattern)
+  </Step>
+  <Step title="Modify Your Codebase to use Clerk">
+    Now that your data is migrated, you need to modify your code to read and write to Clerk. 
+    Use our migrations tooling to help you implement Clerk features next to existing authentication code [Read More On That Here](https://www.google.com)
+  </Step>
+  <Step title="Finalize and Clean Up">
+    Once your data is synced, and that you're updated code changes work as expected. You can finalize the migration on the dashboard. [Read More Here](https://www.google.com)
+  </Step>
+  <Step title="Clean Up">
+    Now that all your users are using clerk, you can remove references to your old auth solution.
+  </Step>
+</Steps>
+
 
 ## Introducing the Migrations API
 
