--- a/guides/supabase.mdx
+++ b/guides/supabase.mdx
@@ -4,171 +4,4 @@ description: "How to migrate your auth from Supabase to Clerk"
 icon: "square-bolt"
 ---
 
-## Prerequisites
-
-- A Supabase account
-- A Clerk account
-- Good understanding of expand and contract database migrations
-- You've read [using the Migrations API](/using-the-migrations-api)
-
-## Step 1: Trickle Migrating Your Supabase Users.
-
-Following a standard expand-and-contract database migration we need to start with the "Expand step"
-
-So everytime you create or edit user data in Supabase, you'll need to create or edit the user in Clerk. You can use the Migrations API to do this.
-
-We recommend creating database triggers, since these will ensure that the migration is atomic and consistent.
-
-### First use Supabase Vault to add your Clerk API key to the database.
-
-The Migrations API requires the clerk secret key to authenticate a request. So you should add your Clerk API key to the Supabase vault, allow Supabase scripts to read the secret.
-
-[Read More](https://supabase.com/docs/guides/database/vault)
-
-The examples below assume you added the clerk secret key to the Supabase vault as `CLERK_API_KEY`.
-
-### Now Create The Triggers You Need
-
-<Note>
-  The following triggers are examples that migrate basic user data and assume
-  you entered the Clerk API key in Supabase Vault as `CLERK_API_KEY`. If you
-  need to migrate additional custom data (such as user roles), you'll need to
-  modify these triggers accordingly.
-</Note>
-
-### Create User Trigger
-
-This trigger creates a user in Clerk when a user is created in Supabase.
-
-Read the original `POST /users` [documentation](https://clerk.com/docs/reference/backend-api/tag/Users#operation/CreateUser) for more the full list of fields.
-
-```sql
-CREATE EXTENSION IF NOT EXISTS pg_net;
-
-CREATE OR REPLACE FUNCTION enqueue_clerk_create_user()
-RETURNS TRIGGER AS $$
-DECLARE
-    request_body JSONB;
-    response JSONB;
-    http_status INT;
-BEGIN
-
-    request_body := jsonb_build_object(
-        'external_id', NEW.id::TEXT,
-        'email_address', NEW.email,
-        'password_hasher', 'bcrypt',
-        'password_digest', NEW.encrypted_password,
-        'created_at', to_char(NEW.created_at, 'YYYY-MM-DD"T"HH24:MI:SS.MS"Z"')
-
-    );
-
-    select
-        net.http_post(
-        url := 'https://api.clerk.com/v1/migrations/users',
-        body := request_body,
-        headers := jsonb_build_object(
-            'Content-Type', 'application/json',
-            'Authorization', 'Bearer ' || vault.get_secret('CLERK_API_KEY')
-        )
-    ) as request_id into response;
-
-    RETURN NEW;
-END;
-$$ LANGUAGE plpgsql SECURITY DEFINER;
-
-CREATE TRIGGER trigger_enqueue_clerk_create_user
-AFTER INSERT ON auth.users
-FOR EACH ROW
-EXECUTE FUNCTION enqueue_clerk_create_user();
-```
-
-### Edit User Trigger
-
-This trigger edits a user in Clerk when a user is edited in Supabase.
-
-Read the original `PATCH /users` [documentation](https://clerk.com/docs/reference/backend-api/tag/Users#operation/UpdateUser) for more the full list of fields.
-
-```sql
-CREATE EXTENSION IF NOT EXISTS pg_net;
-
-CREATE OR REPLACE FUNCTION enqueue_clerk_edit_user()
-RETURNS TRIGGER AS $$
-DECLARE
-    request_body JSONB;
-    response JSONB;
-    http_status INT;
-BEGIN
-
-    request_body := jsonb_build_object(
-        'external_id', NEW.id::TEXT,
-        'email_address', NEW.email,
-        'password_hasher', 'bcrypt',
-        'password_digest', NEW.encrypted_password,
-        'created_at', to_char(NEW.created_at, 'YYYY-MM-DD"T"HH24:MI:SS.MS"Z"')
-    );
-
-    select
-        net.http_patch(
-        url := 'https://api.clerk.com/v1/migrations/users/' || NEW.id::TEXT,
-        body := request_body,
-        headers := jsonb_build_object(
-            'Content-Type', 'application/json',
-            'Authorization', 'Bearer ' || vault.get_secret('CLERK_API_KEY')
-        )
-    ) as request_id into response;
-
-    RETURN NEW;
-END;
-$$ LANGUAGE plpgsql SECURITY DEFINER;
-
-CREATE TRIGGER trigger_enqueue_clerk_edit_user
-AFTER UPDATE ON auth.users
-FOR EACH ROW
-EXECUTE FUNCTION enqueue_clerk_edit_user();
-```
-
-## Step 2: Importing Users into Clerk
-
-<Note>
-  Under Construction.
-
-However, all we need to do is call the `POST /migrations/users` endpoint with the `external_id` of each user.
-
-We can have a dashboard import button, a cli, a script, or trigger to do this, but I haven't worked it out yet.
-
-</Note>
-
-## Step 3: Using Clerk Auth In Supabase RLS
-
-<Note>
-
-This section is currently under construction.
-
-We will need to do something like this: https://supabase.com/partners/integrations/clerk
-
-But I need to figure out the easiest way to modify RLS policies.
-
-</Note>
-
-## Step 4: Migrate Your App to Use Clerk
-
-Now you can finally start modifying your app to use Clerk for authentication!
-
-For Supabase we created a React package to help you migrate your app to use Clerk.
-
-If you aren't using React, you can still migrate your app to Clerk, but you should reference [using other auth providers](/guides/other-auth-providers) instead.
-
-[Read More](/supabase-react)
-
-### Create Supabase Functions to get Migration Status and Auth Token
-
-We need you to copy and paste the following functions into your Supabase project.
-
-<Note>Under Construction xD Working on this right now.</Note>
-
-### Using @clerk/supabase-auth-migrator
-
-<Note>
-  This is a mock guide... if you want to play around with the package I built
-  let me know and I will help.
-</Note>
+under construction.
