--- a/introduction.mdx
+++ b/introduction.mdx
@@ -15,7 +15,7 @@ Our auth migration follows a similiar pattern to the common expand and contract 
 
 <Steps>
   <Step title="Sync Your Data to Clerk.">
-    Use <b>Clerk Polling</b> to sync your data to Clerk. [Read More Here.](https://www.prisma.io/dataguide/types/relational/expand-and-contract-pattern)
+    Use <b>Clerk Polling</b> to sync your data to Clerk. [Read More Here.](/syncing-user-data)
   </Step>
   <Step title="Modify Your Codebase to use Clerk">
     Now that your data is migrated, you need to modify your code to read and write to Clerk. 
