--- a/introduction.mdx
+++ b/introduction.mdx
@@ -30,28 +30,9 @@ Our auth migration follows a similiar pattern to the common expand and contract 
 </Steps>
 
 
-## Introducing the Migrations API
+## We've made a series of guides to help you migrate
 
-That's why we made the **Migrations API**. It allows you to easily call the clerk api, but hides all the complexity of managing user ids, rate limits, api call ordering, and queue management from you.
 
-With the **Migrations API**, what was once a nightmarish task becomes a manageable expand-and-contract data migration. This API not only provides you with **observability** through a live dashboard and logs but also **flexibility**. You can pause, restart, or even abandon a migration without risk, all while maintaining zero downtime. By the end of the process, your users might not even realize they've been transitioned to a new system.
-
-<CardGroup cols={2}>
-  <Card title="Self Hosting Your API" icon="stars" href="/self-host">
-    Get the migrations hosted using Cloudflare Workers!
-  </Card>
-  <Card
-    title="Using The Migrations API"
-    icon="code"
-    href="/using-the-migrations-api"
-  >
-    Learn how to use the Migrations API to migrate your users and organizations.
-  </Card>
-</CardGroup>
-
-## Implement the migration into your app.
-
-We've made a series of guides and packages to help you implement the Migrations API into your app.
 
 <CardGroup cols={2}>
   <Card
@@ -71,7 +52,6 @@ We've made a series of guides and packages to help you implement the Migrations 
 
 >
 
-    Automatically generate endpoints from an OpenAPI spec
 
   </Card>
   <Card
@@ -79,13 +59,11 @@ We've made a series of guides and packages to help you implement the Migrations 
     icon="screwdriver-wrench"
     href="/guides/auth-0"
   >
-    Build interactive features and designs to guide your users
   </Card>
   <Card
     title="Using Other Auth Providers"
     icon="stars"
     href="/guides/other-auth-providers"
   >
-    Check out our showcase of our favorite documentation
   </Card>
 </CardGroup>
