--- a/introduction.mdx
+++ b/introduction.mdx
@@ -21,7 +21,7 @@ Our auth migration follows a similiar pattern to the common expand and contract 
     Now that your data is migrated, you need to modify your code to read and write to Clerk. 
     Use our migrations tooling to help you implement Clerk features next to existing authentication code [Read More On That Here](https://www.google.com)
   </Step>
-  <Step title="Finalize and Clean Up">
+  <Step title="Finalize">
     Once your data is synced, and that you're updated code changes work as expected. You can finalize the migration on the dashboard. [Read More Here](https://www.google.com)
   </Step>
   <Step title="Clean Up">
