--- a/syncing-user-data.mdx
+++ b/syncing-user-data.mdx
@@ -219,6 +219,8 @@ You'll now need to fill in the function:
 
 <img height="200" src="/images/pollNewlyCreatedUsers.png" />
 
+Notably, you need to return a list of clerk users, as well as the new cursor for the next poll.
+
 <AccordionGroup>
   <Accordion title="Example">
 ```typescript
@@ -293,7 +295,7 @@ You'll now need to fill in the function:
 
 <img height="200" src="/images/pollUpdatedUsers.png" />
 
-
+Notably, you need to return a list of clerk users, as well as the new cursor for the next poll.
 
 <AccordionGroup>
   <Accordion title="Example">
